deploy/k8s-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app-ns
spec:
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
